# OptionPricer

./: .gitignore  CMakeLists.txt  README.md  makefile
ConsoleApplication/: main.cpp
Models/: AccuracyConfidence.cpp  AccuracyConfidence.h  BlackScholes.cpp  BlackScholes.h  BlackScholesMontecarlo.cpp  BlackScholesMontecarlo.h  BlackScholesSpot.cpp  BlackScholesSpot.h  CoxRossRubinstein.cpp  CoxRossRubinstein.h  GaussianRandomVariable.cpp  GaussianRandomVariable.h  MonteCarloSimulation.cpp  MonteCarloSimulation.h  NbObs.cpp  NbObs.h  NormalDistributionSimulator.h  OptionSensitivity.cpp  OptionSensitivity.h  PathGenerator.cpp  PathGenerator.h  ReadMe.txt  RunningSimulation.cpp  RunningSimulation.h  RunningStats.cpp  RunningStats.h  SpotSimulator.h  StopSimulation.cpp  StopSimulation.h  TimeLimit.cpp  TimeLimit.h  Volatility.cpp  Volatility.h  desktop.ini  math_functions.cpp  math_functions.h
Options/: AmericanOption.h  ArithmeticAverage.cpp  ArithmeticAverage.h  AsianOption.h  AssetOrNothingOption.h  BarrierOption.h  CashOrNothingOption.cpp  CashOrNothingOption.h  DigitalOption.cpp  Down.cpp  Down.h  FixedStrike.h  FixedStrikeLookbackOption.cpp  FixedStrikeLookbackOption.h  FloatingStrike.cpp  FloatingStrikeLookbackOption.cpp  FloatingStrikeLookbackOption.h  GeometricAverage.cpp  GeometricAverage.h  IAsianOption.h  IBarrierOption.h  ILookbackOption.h  KnockIn.cpp  KnockIn.h  KnockOut.cpp  KnockOut.h  LookbackOption.cpp  LookbackOption.h  Option.cpp  Option.h  PathDependentOption.cpp  PathIndependentOption.cpp  PathIndependentOption.h  ReadMe.txt  Up.cpp  Up.h  VanillaOption.cpp  VanillaOption.h
Pricer/: main.cpp  pricer.ui
View/: AmericanOptionFactory.cpp  AmericanOptionFactory.h  AssetOrNothingOptionFactory.cpp  AssetOrNothingOptionFactory.h  BaseOptionWidget.cpp  BaseOptionWidget.h  BlackScholesFactory.cpp  (+39 more)
libs/libcontroller_options/: CMakeLists.txt
libs/libcontroller_options/controller_options/: AController.h  AsianOptionFactory.hpp  BarrierOptionFactory.hpp  BinomialTreeFactory.hpp  BlackScholesFactory.hpp  BlackScholesMCFactory.hpp  CashOrNothingOptionFactory.hpp  Controller.h  Labels.h  LookbackOptionFactory.hpp  ModelsCatalog.h  PathIndependentOptionFactory.hpp  Pricer.h  PricingMapBuilder.h
libs/libcontroller_options/src/: AController.cpp  Labels.cpp  ModelFactory.cpp  OptionFactory.cpp
libs/liboptions/: CMakeLists.txt
libs/liboptions/options/: AccuracyConfidence.h  ArithmeticAverage.h  AssetOrNothingOption.h  BS_StockPriceGen.h  BS_StockPricePathGen.h  BarrierOption.h  BinomialTree.h  BlackScholes.h  BlackScholesGen.h  BlackScholesMontecarlo.h  BlackScholesSpot.h  BrownianMotionGen.h  Call.h  CashOrNothingOption.h  DigitalOption.h  Down.h  EuropeanOption.h  FloatingStrike.h  GaussianRandomVariable.h  GeometricAverage.h  IBarrierOption.h  ILookbackOption.h  KnockIn.h  KnockOut.h  LookbackOption.h  MC_Simulation.h  MonteCarloSimulation.h  NbObs.h  NormalDistributionSimulator.h  Option.h  OptionNature.h  OptionSensitivity.h  PathDependentOption.h  PathGenerator.h  PathIndependentOption.h  Put.h  TimeLimit.h  Up.h  VanillaOption.h  Volatility.h  (+2 more)
libs/liboptions/src/: AssetOrNothingOption.cpp  BS_StockPriceGen.cpp  BS_StockPricePathGen.cpp  BinomialTree.cpp  BlackScholes.cpp  BlackScholesMontecarlo.cpp  BlackScholesSpot.cpp  BrownianMotionGen.cpp  FixedStrike.cpp  IBarrierOption.cpp  NbObs.cpp  PathDependentOption.cpp  PathGenerator.cpp  RunningStats.cpp  TimeLimit.cpp  VanillaOption.cpp  greeks.cpp
src/options/: AccuracyConfidence.cpp  AmericanOption.cpp  ArithmeticAverage.cpp  AssetOrNothingOption.cpp  BlackScholes.cpp  BlackScholesGen.cpp  BlackScholesMontecarlo.cpp  BlackScholesSpot.cpp  CMakeLists.txt  Call.cpp  CashOrNothingOption.cpp  CoxRossRubinstein.cpp  DigitalOption.cpp  EuropeanOption.cpp  FixedStrike.cpp  GeometricAverage.cpp  IAsianOption.cpp  IBarrierOption.cpp  ILookbackOption.cpp  LookbackOption.cpp  MonteCarloSimulation.cpp  Option.cpp  OptionSensitivity.cpp  PathDependentOption.cpp  PathGenerator.cpp  PathIndependentOption.cpp  Put.cpp  RunningStats.cpp  Up.cpp  VanillaOption.cpp  Volatility.cpp  makefile  math_functions.cpp
view/: CMakeLists.txt
view/build-pricer-Desktop_Qt_5_9_1_GCC_64bit-Debug/: Makefile  moc_ModelFactory.cpp  moc_UnderlyingWidget.cpp  moc_volatilitywidget.cpp
view/build-pricer-Desktop_Qt_5_9_1_GCC_64bit-Release/: Makefile  moc_OptionFactory.cpp  moc_optionwindow.cpp  pricer
view/options/: AssetOrNothingOptionFactory.h  BaseOptionWidget.cpp  BaseOptionWidget.h  BlackScholesFactory.h  CashOrNothingOptionFactory.h  CoxRossRubinsteinFactory.cpp  FrameContainer.cpp  FrameContainer.h  IAsianOptionFactory.h  IBarrierOptionFactory.cpp  IBarrierOptionFactory.h  ModelFactory.cpp  OptionFactory.cpp  OptionFactory.h  UnderlyingWidget.cpp  marketwidget.h  optionalstrikewidget.cpp  optionwindow.cpp  optionwindow.h  pathdependentoptionwidget.h  pathindependentoptionwidget.h  pricerview.h  strikewidget.h  volatilitywidget.cpp  volatilitywidget.h
view/pricer/: CMakeLists.txt  main.cpp  pricer.pro
view/pricer/view-options/: AmericanOptionFactory.cpp  AmericanOptionFactory.h  AsianOptionFactoryWidget.cpp  AsianOptionWidget.h  AssetOrNothingOptionFactory.cpp  BarrierOptionWidget.cpp  BarrierOptionWidget.h  BaseOptionWidget.cpp  BaseOptionWidget.h  BinomialTreeFactory.cpp  BinomialTreeFactory.h  BinomialTreeWidget.cpp  BinomialTreeWidget.h  BlackScholesFactory.cpp  BlackScholesMonteCarloFactory.cpp  BlackScholesMonteCarloFactory.h  BlackScholesMonteCarloWidget.cpp  BlackScholesMonteCarloWidget.h  BlackScholesWidget.cpp  BlackScholesWidget.h  CashOrNothingOptionFactory.cpp  CashOrNothingOptionWidget.cpp  CashOrNothingOptionWidget.h  CoxRossRubinsteinFactory.h  EuropeanOptionFactory.cpp  EuropeanOptionFactory.h  IAsianOptionFactory.cpp  IBarrierOptionFactory.cpp  IBarrierOptionFactory.h  LookbackOptionFactory.cpp  LookbackOptionFactory.h  LookbackOptionWidget.cpp  LookbackOptionWidget.h  ModelFactory.cpp  ModelFactory.h  ModelFactoryWidget.cpp  ModelFactoryWidget.h  OptController.cpp  OptController.h  OptionFactory.cpp  (+22 more)
(+103 files in other folders)
